k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: erp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: iam-core-front:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: erp-namespace
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
